<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorAccent"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txt_company"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/txt_company"
                    android:inputType="text"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/company_spinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:prompt="@string/minimum_unit" />

                <TextView
                    android:id="@+id/txt_branch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/txt_branch"
                    android:inputType="text"
                    android:textSize="8pt" />

                <Spinner
                    android:id="@+id/spinner_branch"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:prompt="@string/minimum_unit" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txtFrom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1.19"
                    android:text="Date:"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="10pt"/>

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="0.42"
                    android:text="01 Jan 2016"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="@color/color_primary_dark"
                    android:textSize="10pt"/>

                <Button
                    android:id="@+id/btn_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.80"
                    android:background="@drawable/calender"
                    android:onClick="btnDateOnClick" />


            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_reference"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/et_reference"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_reference"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_customer_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/et_customer_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_customer_code"
                        android:inputType="text"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnAddCustomer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.90"
                    android:onClick="btnAddCustomer"
                    android:src="@android:drawable/ic_input_add"
                    android:textAlignment="center"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_item_code"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2">

                    <EditText
                        android:id="@+id/et_item_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_item_code"
                        android:inputType="text"/>

                </android.support.design.widget.TextInputLayout>

                <ImageButton
                    android:id="@+id/btnAddItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.90"
                    android:onClick="btnAddSingleItem"
                    android:src="@android:drawable/ic_input_add"
                    android:textAlignment="center"/>
                <TextView
                    android:id="@+id/txt_item_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="Item Name"
                    android:textAlignment="center"
                    android:textSize="8pt"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_or"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="2"
                    android:text="@string/OrScan"
                    android:textAlignment="center"
                    android:textSize="12pt" />
                <Button
                    android:id="@+id/btn_barcode_scanner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.80"
                    android:background="@color/color_accent"
                    android:onClick="itemScanOnClick"
                    android:text="@string/btn_scan"
                    android:textColor="@android:color/white"/>

            </LinearLayout>



            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/txt_minimum_unit"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:hint="@string/hint_minimum_unit"
                    android:inputType="text"
                    android:textSize="8pt"/>

                <Spinner
                    android:id="@+id/minimum_unit_spinner"
                    style="@style/spinner_style"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:prompt="@string/minimum_unit"
                    />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_balance"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/et_balance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_balance"
                        android:inputType="number"/>

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/et_quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/hint_quantity"
                    android:inputType="number"/>

            </android.support.design.widget.TextInputLayout>

            <Button

                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@color/color_accent"
                android:clickable="true"
                android:onClick="btnAddItemOnClick"
                android:text="@string/btn_add"
                android:textColor="@android:color/white"/>


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"

                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"

                         android:layout_marginTop="5dp">

                <TableRow
                    android:background="@color/color_primary_dark"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Date"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:text="Customer Code"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:text="Item Code"
                        android:textAlignment="viewStart"
                        android:textColor="#FFFFFF"/>

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Balance"
                        android:textAlignment="center"
                        android:textColor="#FFFFFF"/>
                </TableRow>


            </TableLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sale_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            </android.support.v7.widget.RecyclerView>

            <Button
                android:id="@+id/btnSale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@color/color_accent"
                android:onClick="saleOnClick"
                android:text="Sale"
                android:textColor="@android:color/white"/>

        </LinearLayout>


    </ScrollView>


</LinearLayout>